...
  "@@locale": "nl",

  "appTitle": "DearDays",

  "settings": "Instellingen",
  "editProfile": "Profiel bewerken",
  "account": "ACCOUNT",
  "email": "E-mail",
  "password": "Wachtwoord",
  "subscription": "Abonnement",
  "manage": "Beheren",

  "journaling": "DAGBOEK",
...
